<resources>
    <string name="app_name">QuizApp</string>
    <string name="submit">SUBMIT</string>
    <string name="progress">0/10</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="Title">QuizApp!</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_name">Please enter your name</string>
    <string name="hint">e.g. John</string>
    <string name="start_button">Start</string>
    <string name="finish">FINISH</string>
    <string name="next_question">GO TO NEXT QUESTION</string>
    <string name="result">Result</string>
    <string name="trophy_content_description">Image of a trophy</string>
    <string name="congratulations">Hey, Congratulations!</string>
    <string name="username">Username</string>
    <string name="your_score_is">Your Score is 9 out of 10</string>
</resources>